tests/lean/906.lean.expected.out
906.lean:2:4-2:15: warning: declaration uses `sorry`
906.lean:14:2-14:28: error: Tactic `simp` failed with a nested error:
maximum recursion depth has been reached
use `set_option maxRecDepth <num>` to increase limit
use `set_option diagnostics true` to get diagnostic information
